--- a/calculator.html
+++ b/calculator.html
@@ -14,6 +14,12 @@
 
 			}
 
+			function sin() {
+				
+				var num = document.getElementById("n1");
+				num.value = Math.sin(num.value);
+			}
+
 		</script>
 
 	</head>
@@ -27,6 +33,8 @@
 		<input type="text" id="n1"><p>
 
 		<button onclick="cube()"> x^3 </button>
+
+		<button onclick="sin()">sin(x)</button>
 		
 	</body>
 
